--- a/templates/sale/index.html.twig
+++ b/templates/sale/index.html.twig
@@ -26,7 +26,7 @@
                             <span class="hidden sm:block text-xs">Nom de l'</span>
                             <span class="text-primary-400 text-xs md:text-lg mt-1 drop-shadow-2xl family">object</span>
                         </div>
-                        <i data-feather="filter"></i>
+                        <i class="triable-icon text-gray-300 hover:text-gray-400 dark:text-gray-600 dark:hover:text-gray-500" data-feather="filter"></i>
                     </div>
                 </th>
 
@@ -36,7 +36,7 @@
                             <span class="hidden sm:block text-xs">%</span>
                             <span class="text-primary-400 text-xs md:text-lg mt-1 drop-shadow-2xl family">profit</span>
                         </div>
-                        <i data-feather="filter"></i>
+                        <i class="triable-icon text-gray-300 hover:text-gray-400 dark:text-gray-600 dark:hover:text-gray-500" data-feather="filter"></i>
                     </div>
                 </th>
 
@@ -46,7 +46,7 @@
                             <span class="sm:block text-xs">Date d'</span>
                             <span class="text-primary-400 text-xs md:text-lg mt-1 drop-shadow-2xl family">achat</span>
                         </div>
-                        <i data-feather="filter"></i>
+                        <i class="triable-icon text-gray-300 hover:text-gray-400 dark:text-gray-600 dark:hover:text-gray-500" data-feather="filter"></i>
                     </div>
                 </th>
 
@@ -56,7 +56,7 @@
                             <span class="hidden sm:block text-xs">Date de</span>
                             <span class="text-primary-400 text-xs md:text-lg mt-1 drop-shadow-2xl family">vente</span>
                         </div>
-                        <i data-feather="filter"></i>
+                        <i class="triable-icon text-gray-300 hover:text-gray-400 dark:text-gray-600 dark:hover:text-gray-500" data-feather="filter"></i>
                     </div>
                 </th>
 
@@ -66,7 +66,7 @@
                             <span class="hidden sm:block text-xs">Prix d'</span>
                             <span class="text-primary-400 text-xs md:text-lg mt-1 drop-shadow-2xl family">achat</span>
                         </div>
-                        <i data-feather="filter"></i>
+                        <i class="triable-icon text-gray-300 hover:text-gray-400 dark:text-gray-600 dark:hover:text-gray-500" data-feather="filter"></i>
                     </div>
                 </th>
 
@@ -76,7 +76,7 @@
                             <span class="hidden sm:block text-xs">Prix de </span>
                             <span class="text-primary-400 text-xs md:text-lg mt-1 drop-shadow-2xl family">vente</span>
                         </div>
-                        <i data-feather="filter"></i>
+                        <i class="triable-icon text-gray-300 hover:text-gray-400 dark:text-gray-600 dark:hover:text-gray-500" data-feather="filter"></i>
                     </div>
                 </th>
 
@@ -86,7 +86,7 @@
                             <span class="hidden sm:block text-xs">Etat de </span>
                             <span class="text-primary-400 text-xs md:text-lg mt-1 drop-shadow-2xl family">vente</span>
                         </div>
-                        <i data-feather="filter"></i>
+                        <i class="triable-icon text-gray-300 hover:text-gray-400 dark:text-gray-600 dark:hover:text-gray-500" data-feather="filter"></i>
                     </div>
                 </th>
 
