--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,13 +7,13 @@
         <h2 class="text-center">Nouveau !</h2>
         <div class="flex justify-center flex-col items-center text-center space-y-2">
             <p>Vous pouvez maintenant créer votre page de guilde pour la partager !</p>
-            <a class="form-submit" href="https://monifus.fr/guilde/Bam_Beach">Voir un exemple</a>
+            <a class="form-submit" href="https://monifus.fr/guildes/Bam_Beach">Voir un exemple</a>
             <img class="rounded-lg h-96" src="{{ asset("uploads/guild_page.png") }}" alt="Page de guilde">
         </div>
 
         <div class="flex justify-center flex-col items-center text-center space-y-2">
             <p>Pour ça rien de plus simple :</p>
-            <a class="form-submit form-submit-green" href="{{ path('app_guild_new') }}">Cliquez ici !</a>
+            <a class="form-submit form-submit-green" href="{{ path('app_guilds_new') }}">Cliquez ici !</a>
         </div>
     </section>
 
