--- a/templates/guild/includes/_content.html.twig
+++ b/templates/guild/includes/_content.html.twig
@@ -37,15 +37,15 @@
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
             {% if guild == app.user.guild %}
                 {# Utilisateur connecté et sur la page de sa propre guilde #}
-                <a href="{{ path('app_guild_leave', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-youtube">Quitter la guilde</a>
+                <a href="{{ path('app_guilds_leave', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-youtube">Quitter la guilde</a>
             {% endif %}
 
             {% if isLeader == false and guild != app.user.guild %}
-                <a href="{{ path('app_guild_join', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-green">Rejoindre la guilde</a>
+                <a href="{{ path('app_guilds_join', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-green">Rejoindre la guilde</a>
             {% endif %}
         {% else %}
             {# Utilisateur non connecté #}
-            <a href="{{ path('app_guild_join', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-green">Rejoindre la guilde</a>
+            <a href="{{ path('app_guilds_join', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-green">Rejoindre la guilde</a>
         {% endif %}
     </div>
 </div>
