--- a/templates/guild/show.html.twig
+++ b/templates/guild/show.html.twig
@@ -33,7 +33,7 @@
 
     <div class="dark:text-white grid gap-2 mt-6">
         <p>Vous voulez créer votre page ?</p>
-        <a class="form-submit form-submit-green mx-auto" href="{{ path('app_guild') }}">Cliquez ici !</a>
+        <a class="form-submit form-submit-green mx-auto" href="{{ path('app_guilds') }}">Cliquez ici !</a>
     </div>
     <p class="mt-2 text-xs">Propulsé par <a class="link" href="https://monifus.fr/">Monifus.fr</a></p>
 
