--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -30,7 +30,7 @@
                 <i data-feather="book" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Documentation</span>
             </a>
-            <a href="{{ path("app_guild") }}" class="nav-item group/icon">
+            <a href="{{ path("app_guilds") }}" class="nav-item group/icon">
                 <i data-feather="shield" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Guifus</span>
             </a>
