--- a/templates/guild/show.html.twig
+++ b/templates/guild/show.html.twig
@@ -4,6 +4,24 @@
 
 {% block body %}
 
+    <section class="wrapper-size grid gap-6 mb-6">
+        <a href="{{ path("app_home") }}" class="flex items-center justify-center">
+            <img class="w-6" src="{{ asset('uploads/logo.svg') }}" alt="Logo Monifus">
+            <span class="font-bold ml-2 text-2xl">Monifus</span>
+        </a>
+        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+            <div class="grid gap-2">
+                <p class="text-center text-xs">Vous semblez connecté, vous pouvez retourner sur le site via le bouton ci-dessous :</p>
+                <div class="flex items-center justify-center">
+                    <a class="form form-submit" href="{{ path('app_guilds') }}">Retour</a>
+                </div>
+            </div>
+        {% else %}
+            <div class="flex items-center justify-center">
+                <a class="form form-submit" href="{{ path('app_guilds') }}">Annuaire Guildes</a>
+            </div>
+        {% endif %}
+    </section>
     <section class="wrapper wrapper-style wrapper-size wrapper-p-0 relative z-50">
         {{ include("guild/includes/_members.html.twig") }}
         <div class="relative">
