:pencil2: Fix bug on popup enter color + spacing

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -72,7 +72,7 @@
             <p class="">Le site est en cours de développement, vous pouvez donc rencontrer des bugs. Merci de le signaler via le <a class="text-discord font-semibold" href="https://discord.gg/KVZP5Cyf9Q">discord</a> ou d'attendre un correctif. Merci pour votre compréhension. 🧡</p>
             <hr>
             <p>L'équipe Monifus.</p>
-            <button class="form-submit popup-close">OK</button>
+            <button class="form-submit popup-enter-close">OK</button>
         </div>
     </div>
 
