:pencil2: Fix color

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,7 +11,7 @@
         </div>
         <div class="flex justify-center flex-col items-center text-center space-y-2">
             <p><strong>Participez</strong> au concours twitter et <strong class="text-green-400">tentez de gagner</strong> :</p>
-            <p class="flex items-center text-2xl text-white uppercase">
+            <p class="flex items-center text-2xl dark:text-white uppercase">
                 <span>2 millions </span>
                 <img class="ml-2 h-6" src="{{ asset('uploads/kamas.webp') }}" alt="">
             </p>
