:sparkles: Add guilds doc

--- a/templates/documentation/index.html.twig
+++ b/templates/documentation/index.html.twig
@@ -19,6 +19,10 @@
                         <i class="tab-item-icon" data-feather="award"></i>
                         <span>Records</span>
                     </div>
+                    <div class="tab-item">
+                        <i class="tab-item-icon" data-feather="shield"></i>
+                        <span>Guildes</span>
+                    </div>
                 </nav>
             </div>
 
@@ -26,6 +30,7 @@
                 {{ include('documentation/includes/_monitors.html.twig') }}
                 {{ include('documentation/includes/_sales.html.twig') }}
                 {{ include('documentation/includes/_records.html.twig') }}
+                {{ include('documentation/includes/_guilds.html.twig') }}
             </div>
         </section>
     <script>
