--- a/templates/guild/new.html.twig
+++ b/templates/guild/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello GuildController!{% endblock %}
+{% block title %}Ajouter une guilde | {{ parent() }}{% endblock %}
 
 {% block body %}
     <h1 class="text-center">Créer une page de guilde</h1>
