--- a/templates/guild/show.html.twig
+++ b/templates/guild/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base_form.html.twig' %}
 
-{% block title %}Guifus | {{ parent() }}{% endblock %}
+{% block title %}Guilde {{ guild.name }} | {{ parent() }}{% endblock %}
 
 {% block body %}
 
