--- a/templates/guild/includes/_content.html.twig
+++ b/templates/guild/includes/_content.html.twig
@@ -1,51 +1,38 @@
-<div class="p-4 grid gap-6">
-    <div class="grid gap-2">
-        <h3 class="text-center dark:text-orange-500 mt-1">{{ guild.name }}</h3>
-        <p class="text-center">{{ guild.description }}</p>
-    </div>
-    <div class="grid-gap-2">
-        <div class="flex justify-between">
-            <div class="flex items-center">
-                <i class="w-4 mr-2 text-primary-500" data-feather="server"></i>
-                <p class="font-bold">Serveur : </p>
-            </div>
-            <p class="text-tertiary-400 font-bold">{{ guild.server }}</p>
+<div class="p-4 grid gap-2">
+    <h3 class="text-center dark:text-orange-500">{{ guild.name }}</h3>
+    <div class="flex justify-between">
+        <div class="flex items-center">
+            <i class="w-4 mr-2 text-primary-500" data-feather="server"></i>
+            <p class="font-bold">Serveur : </p>
         </div>
-        <div class="flex justify-between">
-            <div class="flex justify-between">
-                <i class="w-4 mr-2 text-primary-500" data-feather="users"></i>
-                <p class="font-bold">Membres : </p>
-            </div>
-            <p class="text-green-400 font-bold">{{ guild.members|length }}</p>
-        </div>
+        <p class="text-tertiary-400 font-bold">{{ guild.server }}</p>
     </div>
-
-    <div class="grid gap-2">
-        {% if guild.discordUrl %}
-            <a class="form-submit form-submit-discord uppercase" href="{{ guild.discordUrl }}">discord</a>
-        {% endif %}
-        {% if guild.websiteUrl %}
-            <a class="form-submit form-submit-website uppercase" href="{{ guild.websiteUrl }}">site</a>
-        {% endif %}
-
-        <button id="members-btn"  class="form-submit">Voir les membres</button>
-
-        {% if guild.leader == app.user %}
-            <a class="form-submit form-submit-green" href="#">Modifier la guilde</a>
-        {% endif %}
-
-        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-            {% if guild == app.user.guild %}
-                {# Utilisateur connecté et sur la page de sa propre guilde #}
-                <a href="{{ path('app_guilds_leave', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-youtube">Quitter la guilde</a>
-            {% endif %}
-
-            {% if isLeader == false and guild != app.user.guild %}
-                <a href="{{ path('app_guilds_join', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-green">Rejoindre la guilde</a>
-            {% endif %}
-        {% else %}
-            {# Utilisateur non connecté #}
-            <a href="{{ path('app_guilds_join', {'name': guild.name}) }}" id="members-btn" class="form-submit form-submit-green">Rejoindre la guilde</a>
-        {% endif %}
+    <div class="flex justify-between">
+        <div class="flex justify-between">
+            <i class="w-4 mr-2 text-primary-500" data-feather="users"></i>
+            <p class="font-bold">Membres : </p>
+        </div>
+        <p class="text-green-400 font-bold">{{ guild.members|length }}</p>
+    </div>
+    <div class="flex justify-between">
+        <div class="flex justify-between">
+            <i class="w-4 mr-2 text-primary-500" data-feather="shield"></i>
+            <p class="font-bold">Niveau : </p>
+        </div>
+        <p class="text-green-400 font-bold">{{ guild.level }}</p>
+    </div>
+    <div class="flex justify-between">
+        <div class="flex justify-between">
+            <i class="w-4 mr-2 text-primary-500" data-feather="user-plus"></i>
+            <p class="font-bold">Level requis : </p>
+        </div>
+        <p class="text-green-400 font-bold">{{ guild.minimumLevel }}</p>
+    </div>
+    <div class="flex justify-between">
+        <div class="flex justify-between">
+            <i class="w-4 mr-2 text-primary-500" data-feather="award"></i>
+            <p class="font-bold">Succès requis : </p>
+        </div>
+        <p class="text-green-400 font-bold">{{ guild.minimumSuccess }}</p>
     </div>
 </div>
