:bug: Access guild page bug

--- a/templates/guild/index.html.twig
+++ b/templates/guild/index.html.twig
@@ -42,7 +42,7 @@
                             <div class="h-24 w-24 rounded-full bg-cover overflow-hidden absolute z-10 left-1/2 transform -translate-x-1/2 top-[calc(100%-5rem)]" style="background-image: url('{{ asset("uploads/blason.png") }}')"></div>
                         {% endif %}
                     </div>
-                    {{ include("guilds/includes/_content.html.twig") }}
+                    {{ include("guild/includes/_content.html.twig") }}
                 </a>
             {% endfor %}
         </div>
