--- a/templates/guild/index.html.twig
+++ b/templates/guild/index.html.twig
@@ -9,6 +9,9 @@
         {% endfor %}
 
         {% if isUserLoggedIn %}
+            {% if userGuild.leader == app.user %}
+                <a class="form-submit form-submit-green" href="{{ path('app_guilds_edit', {'name': userGuild.name}) }}">Modifier ma guilde</a>
+            {% endif %}
             {% if userGuild %}
                 {# Lien vers la page de la guilde de l'utilisateur #}
                 <a class="form-submit" href="{{ path('app_guilds_show', {'name': userGuild.name|replace({' ': '_'})}) }}">{{ userGuild.name }}</a>
