--- a/templates/guild/includes/_form.html.twig
+++ b/templates/guild/includes/_form.html.twig
@@ -1,26 +1,26 @@
 {{ form_start(form, {'attr': {'class': 'form-wrapper'}}) }}
-<div class="grid gap-4 lg:gap-6">
-    <div class="grid grid-cols-2 gap-4">
+<div class="grid gap-4 lg:gap-8">
+    <div class="grid lg:grid-cols-2 gap-4">
         <h2 class="lg:col-span-2">Images de la page</h2>
         {{ form_row(form.blasonPictureFile) }}
         {{ form_row(form.coverPictureFile) }}
     </div>
 
-    <div class="grid grid-cols-2 gap-4">
+    <div class="grid lg:grid-cols-2 gap-4">
         <h2 class="lg:col-span-2">Prérequis de guilde</h2>
         {{ form_row(form.minimumLevel) }}
         {{ form_row(form.level) }}
         {{ form_row(form.minimumSuccess) }}
     </div>
 
-    <div class="grid grid-cols-2 gap-4">
+    <div class="grid lg:grid-cols-2 gap-4">
         <h2 class="lg:col-span-2">Informations principales</h2>
         {{ form_row(form.name) }}
         {{ form_row(form.description) }}
         {{ form_row(form.server) }}
     </div>
 
-    <div class="grid grid-cols-2 gap-4">
+    <div class="grid lg:grid-cols-2 gap-4">
         <h2 class="lg:col-span-2">Liens de votre guilde</h2>
         {{ form_row(form.discordUrl) }}
         {{ form_row(form.websiteUrl) }}
@@ -30,4 +30,3 @@
     </div>
 </div>
 {{ form_end(form) }}
-
