:sparkles: Add search on sale page

--- a/templates/sale/index.html.twig
+++ b/templates/sale/index.html.twig
@@ -15,6 +15,18 @@
 
     {{ include('sale/includes/_items.html.twig') }}
 
+    <form action="{{ path('app_sale') }}" method="get" class="grid gap-2">
+        <label class="form-label" for="search">Recherchez une vente</label>
+        <div class="flex space-x-2">
+            <input value="{{ search }}" id="search" class="form-input h-full flex-1" type="text" name="search" placeholder="Solomonk" />
+            <button class="wrapper wrapper-green h-14 w-14 flex justify-center font-semibold" type="submit">GO</button>
+
+            <a class="wrapper wrapper-red h-14 w-14 flex justify-center" href="{{ path('app_sale') }}">
+                <i data-feather="trash" class="w-4 h-4"></i>
+            </a>
+        </div>
+    </form>
+
     <section class="wrapper wrapper-style wrapper-p-0 text-sm">
         <table id="table" class="w-full text-left rtl:text-right">
             <thead class="text-xs uppercase">
