--- a/templates/xp_pet/index.html.twig
+++ b/templates/xp_pet/index.html.twig
@@ -9,7 +9,9 @@
                     <h2 class="text-center">Rentabilité de la ressource</h2>
                     {% if profitability is not null %}
                         {% if profitability == 0 %}
-                            <p class="wrapper wrapper-yellow justify-center">Peut-être que l'xp de la ressource n'est pas renseigné, merci de bien vouloir nous indiquer le montant sur le <a class="link mx-2" href="https://discord.link/VotreServeurDiscord">Discord</a> pour que l'on puisse le mettre à jour. L'équipe Monifus.</p>
+                            <div  class="wrapper wrapper-yellow justify-center">
+                                <p>Si l'expérience de la ressource n'est pas renseigné, merci de bien vouloir nous indiquer le montant sur le <a class="link" href="https://discord.gg/y8hCwg6AKu">Discord</a> pour que l'on puisse le mettre à jour. L'équipe Monifus.</p>
+                            </div>
                         {% endif %}
                     {% endif %}
                     <img class="w-48 mx-auto" src="{{ asset('uploads/dragoune.png') }}" alt="Image dragoune Dofus">
@@ -41,7 +43,9 @@
                     <h2 class="text-center">Prix d'un point d'expérience</h2>
                     {% if profitability is not null %}
                         {% if profitability == 0 %}
-                            <p class="wrapper wrapper-yellow justify-center">Peut-être que l'xp de la ressource n'est pas renseigné, merci de bien vouloir nous indiquer le montant sur le <a class="link mx-2" href="https://discord.link/VotreServeurDiscord">Discord</a> pour que l'on puisse le mettre à jour. L'équipe Monifus.</p>
+                            <div  class="wrapper wrapper-yellow justify-center">
+                                <p>Si l'expérience de la ressource n'est pas renseigné, merci de bien vouloir nous indiquer le montant sur le <a class="link" href="https://discord.gg/y8hCwg6AKu">Discord</a> pour que l'on puisse le mettre à jour. L'équipe Monifus.</p>
+                            </div>
                         {% endif %}
                     {% endif %}
                     <img class="w-48 mx-auto" src="{{ asset('uploads/bworky.png') }}" alt="Image dragoune Dofus">
