:bug: Fix guild picture + height size on mobile

--- a/templates/base_form.html.twig
+++ b/templates/base_form.html.twig
@@ -46,7 +46,7 @@
 </head>
 <body class="bg-cover bg-center bg-fixed py-16 lg:py-0 flex">
     <div {{ react_component('ThemeToggle') }}></div>
-    <section class="flex flex-col items-center justify-center py-8 mx-auto md:h-screen">
+    <section class="flex flex-col items-center justify-center py-8 mx-auto md:min-h-screen">
         {% block body %}
         {% endblock %}
     </section>
