--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -34,6 +34,10 @@
                 <i data-feather="shield" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Guifus</span>
             </a>
+            <a href="{{ path("app_hero") }}" class="nav-item group/icon">
+                <i data-feather="star" class="nav-item-icon"></i>
+                <span class="nav-item-text group-hover:block">Nos héros</span>
+            </a>
             <a href="https://www.buymeacoffee.com/monifus" class="nav-item group/icon text-tertiary-400">
                 <i data-feather="coffee" class="nav-item-icon"></i>
                 <span class="nav-item-text group-hover:block">Me Soutenir</span>
